--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <title>Excursion Prohject</title>
     </head>
     <body>
-        <header>
+        <div>
             <h1>Discover hidden places in the world around you</h1>
-        </header>
+        </div>
     </body>
