--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div>
-            <h1>Discover hidden places in the world around you</h1>
+            <h1>Discover hidden places in the world around you.</h1>
+            <p>Hello World!</p>
         </div>
     </body>
